# polflow

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: misc.py  search.py  training_example.py
examples/configurational_ML/: ML.py  dataset.py  firat.py  plotting.py  sim_anneal.py
polflow/: defaults.json
polflow/database/: db_tools.py
polflow/ftasks/: database.py  io.py  misc.py  polaron.py  preprocess.py  vasp.py
polflow/fworks/: misc.py  preprocess.py  vasp.py
polflow/inputs/: INCAR_deloc_rel_hq  INCAR_deloc_rel_hq_test  INCAR_deloc_rel_pre_hq_test  INCAR_deloc_rel_rough  INCAR_deloc_rel_test  INCAR_pol_rel_hq  INCAR_pol_rel_mlff  INCAR_pol_rel_occmat  INCAR_pol_rel_rough  KPOINTS  OCCMATRIX_S0A  OCCMATRIX_S0Ax2  OCCMATRIX_S1A  POSCAR_pristine  POSCAR_pristine_unrelaxed.vasp
polflow/structure/: conversion.py  polaron.py  possible_sites.pkl
polflow/tools/: handlers.py  misc.py  occmat_gen.py  occmats.pkl
polflow/workflows/: polaron.py
